--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,10 +17,21 @@
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
+  background-color: #f2f2f2;
+  min-height: 100vh;
   font-family: "DM Sans", sans-serif;
+  font-size: 18px;
+  line-height: 1;
+  display: grid;
+  place-content: center;
 }
