--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,3 +35,23 @@ body {
   display: grid;
   place-content: center;
 }
+
+.xlg-text {
+  font-size: 4rem;
+  font-weight: 500;
+}
+
+.lg-text {
+  font-size: 2.75rem;
+  font-weight: 500;
+}
+
+.med-text {
+  font-size: 2.35rem;
+  font-weight: 500;
+}
+
+.sm-text {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
