--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -55,3 +55,52 @@ body {
   font-size: 1.5rem;
   font-weight: 400;
 }
+
+.bento-grid {
+  max-width: 1400px;
+  margin: 1rem;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 75px;
+  gap: 2rem;
+  grid-template-areas:
+    "box1 box2 box2 box3"
+    "box1 box2 box2 box3"
+    "box1 box2 box2 box3"
+    "box1 box2 box2 box3"
+    "box1 box5 box6 box3"
+    "box4 box5 box6 box3"
+    "box4 box5 box6 box3"
+    "box4 box7 box8 box8"
+    "box4 box7 box8 box8"
+    "box4 box7 box8 box8";
+}
+
+.bento-grid .item {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.bento-grid .item:nth-child(1) {
+  background-color: var(--Yellow-100);
+}
+
+.bento-grid .item:nth-child(2),
+.bento-grid .item:nth-child(8) {
+  background-color: var(--Purple-500);
+  color: var(--White);
+}
+
+.bento-grid .item:nth-child(3) {
+  background-color: var(--Purple-100);
+}
+
+.bento-grid .item:nth-child(4),
+.bento-grid .item:nth-child(6) {
+  background-color: var(--Yellow-500);
+}
+
+.bento-grid .item:nth-child(5),
+.bento-grid .item:nth-child(7) {
+  background-color: var(--White);
+}
