--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -104,3 +104,108 @@ body {
 .bento-grid .item:nth-child(7) {
   background-color: var(--White);
 }
+
+.bento-grid .item:nth-child(1) {
+  grid-area: box1;
+  padding: 6rem 2rem 0 2.5rem;
+}
+
+.bento-grid .item:nth-child(1) em {
+  color: var(--Purple-500);
+}
+
+.bento-grid .item:nth-child(1) img {
+  margin-top: 1rem;
+}
+
+.bento-grid .item:nth-child(2) {
+  grid-area: box2;
+  padding: 2rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.bento-grid .item:nth-child(2) .emphasis {
+  color: var(--Yellow-500);
+}
+
+.bento-grid .item:nth-child(2) img {
+  width: 250px;
+  margin: 1rem 0 0.5rem;
+}
+
+.bento-grid .item:nth-child(3) {
+  grid-area: box3;
+  padding: 2.75rem 2rem 2.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+
+.bento-grid .item:nth-child(3) img {
+  position: absolute;
+  height: 410px;
+  object-fit: cover;
+  object-position: left;
+  top: 150px;
+}
+
+.bento-grid .item:nth-child(4) {
+  grid-area: box4;
+  padding: 1.75rem 2.25rem;
+}
+
+.bento-grid .item:nth-child(4) p {
+  margin-bottom: 2rem;
+}
+
+.bento-grid .item:nth-child(5) {
+  grid-area: box5;
+  padding: 1rem 2rem 1rem 2rem;
+  position: relative;
+}
+
+.bento-grid .item:nth-child(5) p {
+  margin-top: 6rem;
+}
+
+.bento-grid .item:nth-child(5) img {
+  position: absolute;
+}
+
+.bento-grid .item:nth-child(6) {
+  grid-area: box6;
+  position: relative;
+  padding: 1rem 1.75rem;
+}
+
+.bento-grid .item:nth-child(6) p {
+  margin-bottom: 1rem;
+}
+
+.bento-grid .item:nth-child(7) {
+  grid-area: box7;
+  padding: 1.5rem;
+}
+
+.bento-grid .item:nth-child(7) span {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.bento-grid .item:nth-child(7) img {
+  margin-top: 1.5rem;
+}
+
+.bento-grid .item:nth-child(8) {
+  grid-area: box8;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1.75fr 2fr;
+  align-items: center;
+  gap: 1rem;
+}
