--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -209,3 +209,88 @@ body {
   align-items: center;
   gap: 1rem;
 }
+
+@media (max-width: 1024px) {
+  .bento-grid {
+    grid-auto-rows: initial;
+    grid-template-areas:
+      "box1 box1 box2 box2"
+      "box1 box1 box2 box2"
+      "box3 box3 box4 box4"
+      "box3 box3 box4 box4"
+      "box5 box5 box6 box6"
+      "box5 box5 box6 box6"
+      "box7 box7 box8 box8"
+      "box7 box7 box8 box8";
+  }
+
+  .bento-grid .item:nth-child(8) {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .bento-grid .item {
+    text-align: center;
+  }
+
+  .bento-grid {
+    grid-template-areas:
+      "box2"
+      "box5"
+      "box6"
+      "box3"
+      "box8"
+      "box7"
+      "box1"
+      "box4";
+  }
+
+  .bento-grid .item:nth-child(4),
+  .bento-grid .item:nth-child(5),
+  .bento-grid .item:nth-child(6),
+  .bento-grid .item:nth-child(7) {
+    text-align: left;
+  }
+
+  .bento-grid .item:nth-child(1) {
+    padding: 2rem;
+    text-align: left;
+  }
+
+  .bento-grid .item:nth-child(1) .lg-text {
+    font-size: 2.5rem;
+  }
+
+  .bento-grid .item:nth-child(1) img {
+    width: 250px;
+  }
+
+  .bento-grid .item:nth-child(3) {
+    padding: 2.75rem 1rem 2.5rem 1rem;
+  }
+
+  .bento-grid .item:nth-child(3) .lg-text {
+    font-size: 2.25rem;
+  }
+
+  .bento-grid .item:nth-child(3) img {
+    margin: 1rem 0;
+    position: initial;
+    height: initial;
+  }
+
+  .bento-grid .item:nth-child(5) p {
+    margin-top: 10rem;
+  }
+
+  .bento-grid .item:nth-child(8) {
+    padding: 1.5rem 4rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .bento-grid .item:nth-child(5) p {
+    margin-top: 6rem;
+  }
+}
